Fix alignment of tag rows in long tag fixer
Rows were center-aligned

--- a/scss/components/_longTagFixer.scss
+++ b/scss/components/_longTagFixer.scss
@@ -86,6 +86,7 @@
 
 			input[type="checkbox"] {
 				margin: 0 6px 0 0;
+				width: auto;
 			}
 		}
 
